# AISFStudyApp

./: .replit  Pasted-1-Create-a-New-Replit-Project-Log-into-Replit-and-click-Create-to-start-a-new-Node-js-project-2-1727942446260.txt  app.py  chat_request.py  config.py  create_placeholder_icons.py  models.py  pyproject.toml  routes.py
static/: manifest.json
static/css/: styles.css
static/js/: main.js  service-worker.js
templates/: base.html  dashboard.html  exam.html  fill_in_the_blank.html  flashcards.html  generate_lesson.html  index.html  lesson.html  login.html  matching_exercises.html  pdf_viewer.html  quiz.html  register.html  sorting_exercises.html  spaced_repetition.html
